--- a/JAVASCRIPT/18-5/BT1/vuongfarm/css/form_user.css
+++ b/JAVASCRIPT/18-5/BT1/vuongfarm/css/form_user.css
@@ -3,7 +3,7 @@
   margin: 0px;
 }
 
-body{
+body {
   height: 100%;
 }
 
@@ -131,7 +131,7 @@ body{
   letter-spacing: 0em;
 }
 
-.detail_section .header_detail_section .list_action_user{
+.detail_section .header_detail_section .list_action_user {
   position: relative;
   display: inline-block;
 }
@@ -158,12 +158,7 @@ body{
   position: relative;
 }
 
-.detail_section
-  .body_detail_section
-  form
-  .form_detail_section
-  .form_item
-  label {
+.detail_section .body_detail_section form .form_detail_section .form_item label {
   font-size: 26px;
   font-weight: 600;
   line-height: 30px;
@@ -171,12 +166,7 @@ body{
   margin-bottom: 8px;
 }
 
-.detail_section
-  .body_detail_section
-  form
-  .form_detail_section
-  .form_item
-  input {
+.detail_section .body_detail_section form .form_detail_section .form_item input {
   padding: 21px 0px 21px 27px;
   font-size: 24px;
   font-weight: 500;
@@ -184,12 +174,7 @@ body{
   letter-spacing: 0em;
 }
 
-.detail_section
-  .body_detail_section
-  form
-  .form_detail_section
-  .form_item
-  select {
+.detail_section .body_detail_section form .form_detail_section .form_item select {
   padding: 21px 0px 21px 27px;
   width: 423px;
   font-size: 24px;
@@ -198,13 +183,7 @@ body{
   letter-spacing: 0em;
 }
 
-.detail_section
-  .body_detail_section
-  form
-  .form_detail_section
-  .form_name
-  .form_item
-  input {
+.detail_section .body_detail_section form .form_detail_section .form_name .form_item input {
   padding: 21px 0px 21px 27px;
   width: 405px;
   font-size: 24px;
@@ -213,13 +192,7 @@ body{
   letter-spacing: 0em;
 }
 
-.detail_section
-  .body_detail_section
-  form
-  .form_detail_section
-  .form_email
-  .form_item
-  input[type="checkbox"] {
+.detail_section .body_detail_section form .form_detail_section .form_email .form_item input[type="checkbox"] {
   position: absolute;
   top: 61px;
   right: 25px;
@@ -228,22 +201,11 @@ body{
   height: 30px;
 }
 
-.detail_section
-  .body_detail_section
-  form
-  .form_detail_section
-  .form_email
-  .form_item
-  input[type="checkbox"]:checked::before {
+.detail_section .body_detail_section form .form_detail_section .form_email .form_item input[type="checkbox"]:checked::before {
   color: #ffffff;
 }
 
-.detail_section
-  .body_detail_section
-  form
-  .form_detail_section
-  .form_button
-  .btn_cancel {
+.detail_section .body_detail_section form .form_detail_section .form_button .btn_cancel {
   border: 1px solid #ff7008;
   background-color: #ffffff;
   border-radius: 5px;
@@ -255,12 +217,8 @@ body{
   margin-right: 42px;
 }
 
-.detail_section
-  .body_detail_section
-  form
-  .form_detail_section
-  .form_button
-  #btn_submit {
+.detail_section .body_detail_section form .form_detail_section .form_button #btn_submit {
+  width: 68px;
   background: #ff7008;
   color: #ffffff;
   border: none;
@@ -274,22 +232,13 @@ body{
 
 /* class dung chung */
 
-.toggle_link{
+.toggle_link {
   display: none;
 }
 
-.active h5{
+.active h5 {
   font-weight: bolder !important;
 }
-
-
-
-
-
-
-
-
-
 
 .dropbtn {
   padding: 16px;
@@ -305,7 +254,7 @@ body{
   background-color: #f1f1f1;
   min-width: 160px;
   overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -317,4 +266,21 @@ body{
 }
 
 
-.show {display: block;}
+.show {
+  display: block;
+}
+
+.error input {
+  border: 1px solid red;
+}
+
+.error select {
+  border: 1px solid red;
+}
+
+.error small {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 28px;
+  color: red;
+}
