--- a/JAVASCRIPT/18-5/BT1/vuongfarm/css/detail_product.css
+++ b/JAVASCRIPT/18-5/BT1/vuongfarm/css/detail_product.css
@@ -17,11 +17,20 @@
 header {
   display: flex;
   justify-content: space-between;
+  padding: 6px 0;
+  margin-bottom: 15px;
 }
 
 header .left_header {
   display: flex;
   align-items: center;
+  gap: 65px;
+}
+
+header .left_header .logo h1 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 40px;
 }
 
 header .left_header .navigation ul {
@@ -77,10 +86,10 @@ header .left_header .navigation ul li .dropdown:hover .dropdown-content {
   display: block;
 }
 
-header .right_header{
-    display: flex;
-    gap: 16px;
-    align-items: center;
+header .right_header {
+  display: flex;
+  gap: 16px;
+  align-items: center;
 }
 
 header .right_header .form_search {
@@ -96,9 +105,127 @@ header .right_header .form_search input {
 }
 
 header .right_header .form_search img {
-    position: absolute;
-    height: 14px;
-    width: 14px;
-    left: 7px;
-    top: 5px;
+  position: absolute;
+  height: 14px;
+  width: 14px;
+  left: 7px;
+  top: 5px;
+}
+
+header .right_header .cart {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  padding: 4px 7px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+header .right_header .user_account img {
+  width: 30px;
+  height: 30px;
+  border-radius: 10px;
+}
+
+#detail_product .breadcrumb {
+  margin-bottom: 16px;
+}
+
+#detail_product .breadcrumb ul {
+  display: flex;
+  list-style-type: none;
+}
+
+#detail_product .breadcrumb ul li {
+  display: inline;
+  margin-right: 22px;
+  position: relative;
+}
+
+#detail_product .breadcrumb ul li a {
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 20px;
+  color: #474747;
+  text-transform: uppercase;
+}
+
+.breadcrumb ul li+li::before {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: -16px;
+  width: 6px;
+  height: 10px;
+  background-image: url("https://raw.githubusercontent.com/jenyadev3/vertical-menu/44927f26ede48b4b7cf991e961b90c95278de11c/img/arrow.svg");
+  background-size: 6px 10px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.body_detail_product {
+  display: flex;
+  padding: 0 40px 50px 0;
+}
+
+.body_detail_product .left_body_detail_product {
+  width: 40%;
+}
+
+.body_detail_product .left_body_detail_product .list_image .main_image {
+  margin-bottom: 16px;
+}
+
+.body_detail_product .left_body_detail_product .list_image .main_image img {
+  width: 100%;
+  border-radius: 20px;
+}
+
+.body_detail_product .left_body_detail_product .list_image .other_image {
+  display: flex;
+  gap: 50px;
+  overflow-x: auto;
+}
+
+.body_detail_product .left_body_detail_product .list_image .other_image .other_image_item img {
+  width: 190px;
+  height: 180px;
+  border-radius: 20px;
+}
+
+.body_detail_product .right_body_detail_product {
+  width: 60%;
+  padding-left: 42px;
+}
+
+.body_detail_product .right_body_detail_product h1 {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 42px;
+  letter-spacing: 0.01em;
+  color: #2D2D2D;
+}
+
+.body_detail_product .right_body_detail_product .brand{
+  display: flex;
+  gap: 6px;
+}
+
+.body_detail_product .right_body_detail_product .brand h1 {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 42px;
+  letter-spacing: 0.01em;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.body_detail_product .right_body_detail_product .brand span {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 42px;
+  letter-spacing: 0.01em;
+  color: #1565C0;
+  text-transform: uppercase;
 }
